--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "angular": "~1.4.7",
-    "angular-route": "~1.4.7"
+    "angular-route": "~1.4.7",
+    "angular-nlp-compromise": "~1.1.0"
   }
 }
