--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "angular": "~1.4.7",
     "angular-route": "~1.4.7",
-    "angular-nlp-compromise": "~1.1.0"
+    "angular-nlp-compromise": "~1.1.0",
+    "angular-youtube-mb": "~1.1.1"
   }
 }
