--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
     "q": "^1.0.1",
-    "request": "^2.36.0"
+    "request": "^2.36.0",
+    "youtube-node": "^1.3.0",
+    "youtube-search": "^1.0.4"
   }
 }
