--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "start": "node server.js",
   "dependencies": {
     "body-parser": "^1.4.3",
     "express": "^4.4.5",
@@ -12,6 +13,6 @@
     "passport-local": "^1.0.0",
     "q": "^1.0.1",
     "request": "^2.36.0",
-    "youtube-node": "^1.3.0",
+    "youtube-node": "^1.3.0"
   }
 }
