--- a/package.json
+++ b/package.json
@@ -13,6 +13,25 @@
     "passport-local": "^1.0.0",
     "q": "^1.0.1",
     "request": "^2.36.0",
-    "youtube-node": "^1.3.0"
-  }
+    "youtube-node": "^1.3.0",
+    "grunt": "^0.4.4",
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-shell": "^0.6.4",
+    "grunt-contrib-cssmin": "^0.9.0",
+    "grunt-nodemon": "^0.2.1"
+  },
+  "devDependencies": {
+      "supertest": "^0.10.0",
+      "grunt": "^0.4.4",
+      "grunt-contrib-jshint": "^0.9.2",
+      "grunt-contrib-concat": "^0.3.0",
+      "grunt-contrib-uglify": "^0.4.0",
+      "grunt-contrib-watch": "^0.6.1",
+      "grunt-shell": "^0.6.4",
+      "grunt-contrib-cssmin": "^0.9.0",
+      "grunt-nodemon": "^0.2.1"
+    }
 }
