--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,6 @@
   ],
   "dependencies": {
     "angular": "~1.4.7",
-    "angular-route": "~1.4.7",
-    "angular-bootstrap": "~0.14.3"
+    "angular-route": "~1.4.7"
   }
 }
