--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "start": "node server.js",
+  "start": "grunt deploy",
   "dependencies": {
     "body-parser": "^1.4.3",
     "express": "^4.4.5",
