--- a/package.json
+++ b/package.json
@@ -10,13 +10,25 @@
   "dependencies": {
     "body-parser": "^1.4.3",
     "express": "^4.4.5",
+    "grunt": "^0.4.4",
+    "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-cssmin": "^0.9.0",
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.2.1",
+    "grunt-shell": "^0.6.4",
     "morgan": "^1.1.1",
+    "newrelic": "^1.24.1",
     "node-genius": "^1.0.4",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
     "q": "^1.0.1",
     "request": "^2.36.0",
-    "youtube-node": "^1.3.0",
+    "youtube-node": "^1.3.0"
+  },
+  "devDependencies": {
+    "supertest": "^0.10.0",
     "grunt": "^0.4.4",
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-concat": "^0.3.0",
@@ -25,16 +37,5 @@
     "grunt-shell": "^0.6.4",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-nodemon": "^0.2.1"
-  },
-  "devDependencies": {
-      "supertest": "^0.10.0",
-      "grunt": "^0.4.4",
-      "grunt-contrib-jshint": "^0.9.2",
-      "grunt-contrib-concat": "^0.3.0",
-      "grunt-contrib-uglify": "^0.4.0",
-      "grunt-contrib-watch": "^0.6.1",
-      "grunt-shell": "^0.6.4",
-      "grunt-contrib-cssmin": "^0.9.0",
-      "grunt-nodemon": "^0.2.1"
-    }
+  }
 }
